# cvt

./: .env.example  AGENTS.md  README.md  pyproject.toml
src/cvt/: __init__.py  cli.py  mineru.py  paddle.py  settings.py
