[project]
name = "cvt"
version = "0.1.0"
description = "Unified CLI wrappers for document conversion engines"
readme = "README.md"
authors = [
    { name = "xuanqi", email = "xuanqiraphael@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.1",
]

[project.scripts]
cvt = "cvt:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
